[package]
name = "il-boost"
version = "0.1.0"
edition = "2021"

[dependencies]
# Commit Boost
cb-metrics = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "1a5169670e7e4bb17efbaec2fd49d581c1f1025d" }
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "1a5169670e7e4bb17efbaec2fd49d581c1f1025d" }

# Async / Threads
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
dashmap = "5.5.3"

# Serialization
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.115"

# preconf-boost
# preconf = { git = "https://github.com/gattaca-com/preconf-boost", rev = "720f870d40718c9689df73763bc6d8a748bf33d0" }


# Ethereum
ethers = "2.0.14"
alloy = { version = "0.1.3", features = ["rpc", "rpc-types", "full", "rpc-types-beacon", "signer-local", "node-bindings"] }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }

# Crypto
tree_hash = "0.5"
tree_hash_derive = "0.5"

reqwest = "0.12"
hyper = "0.14"

# types
parking_lot = "0.12.1"
ssz_types = "0.6"

# tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


merkle_proof = { git = "https://github.com/sigp/lighthouse", rev = "9e12c21" }
